toggler burger correction and overlapping coorection hence it may increase user experince revised SCSS

--- a/administrator/templates/atum/scss/blocks/_toolbar.scss
+++ b/administrator/templates/atum/scss/blocks/_toolbar.scss
@@ -439,17 +439,17 @@ joomla-toolbar-button {
 
 @include media-breakpoint-down(xs) {
   .toggler-toolbar {
+    position: fixed;
     top: 20px;
+    right: 10px;
+    bottom: 20px;
+    z-index: $zindex-alerts;
     display: block;
     width: 70px;
     height: 70px;
     background: var(--atum-link-color);
-    border-radius: 40px;
     border: 8px solid var(--atum-bg-light);
-    position: fixed;
-    bottom: 20px;
-    right: 10px;
-    z-index: 1030;
+    border-radius: 40px;
 
     .toggler-toolbar-icon::before {
       font: normal normal normal 30px/1 'Font Awesome 5 Free';
